More CSS changes

--- a/style.css
+++ b/style.css
@@ -21,12 +21,6 @@ body {
 
 .stats-container {
     display: flex;
-    align-items: center;
-}
-
-.stats-container:hover {
-    box-shadow: 0 0 30px lightblue;
-    cursor: pointer;
 }
 
 .stats-card {
@@ -38,7 +32,9 @@ body {
     text-align: center;
 }
 
-#num-contributions, #total-raised, #num-games {
+#num-contributions,
+#total-raised,
+#num-games {
     font-size: 50px;
 }
 
